[package]
name = "mpv_drop"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
indexmap = "1.0.2"

serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.38"

alphanumeric-sort = "1.0.6"
rand = "0.6.5"

winit = "0.18.1"
ureq = "0.9.0"

[target.'cfg(windows)'.dependencies]
miow = "0.3.3"
